test/libsolidity/syntaxTests/comments/multiline_unicode_direction_override_2.sol
contract C {
    function f() public pure
    {
        // PDF PDF
        /*underflow ‬‬*/
    }
}
// ----
// ParserError 8936: (75-87): Unicode direction override underflow in comment or string literal.
